# MWTools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README.txt  SweepPlot1d.py  SweepPlot2d.py
DiskMetallicity/: HistogramMetalicityIndividualStars.py  MetalicityUtilities.py  PlotLB.py  PlotMetalicityVSDistance.py  PlotMetalicityVSGCDistance.py  PlotMetalicityVSHelioDistance.py  PlotMetalicityVSHelioDistanceIndividualStars.py  PlotMetallicity.py
HessianCode/: CMakeLists.txt
HessianCode/include/: Hessian.h
HessianCode/sampleFiles/: SampleHessianFile.hes  params.lua  sweepParams.lua
HessianCode/src/: .Hessian.cpp.swp  Hessian.cpp  \  main.cpp
HessianErrors/: BasicMWClass.cpp  BasicMWClass.h  Hessian.h  Makefile  Matrix.cpp  Matrix.h  Scheduler.cpp  Util.h  main.cpp
MWSchedulerLibrary/: CMakeLists.txt
MWSchedulerLibrary/include/: NbodyParameters.h  RunInstance.h  RunInstanceNbody.h  RunSeparationInstance.h  Scheduler.h  Util.h
MWSchedulerLibrary/src/: RunInstance.cpp  RunInstanceNbody.cpp  RunSeparationInstance.cpp  Scheduler.cpp  Util.cpp
Notebooks/: CutDiskData.ipynb  CutDiskData_NewPanStarrs.ipynb  DetermineSouthDustCuts.ipynb  Disk.ipynb  LB_South_Plot.ipynb  TomVirgoPaper.ipynb
Plotting/: CalculateBackgroundFaction.py  HRDiagram.py  LinePlotParameters.py  MWatHomeResults1_May_2018.txt  MWatHomeResults2_May_2018.txt  MWatHomeResults3_May_2018.txt  MWatHomeResults4Streams_16_Aug_2018.txt  MWatHomeResults7_June_2018.txt  MWatHomeResults7_June_2018_NoStars.txt  MWatHomeResults7_June_2018_NoStars_9Removed.txt  MWatHomeResults7_May_2018.txt  MWatHomeResultsBICMixed_8_Sep_2018.txt  PlotDiskFraction.py  PlotTWGBackground.py  RA_Distance_Belokurov_Compairison.py  RA_Distance_Belokurov_Compairison_NoCenters.py  RA_Distance_Belokurov_Compairison_Test.py  RA_Distance_Belokurov_Compairison_With_Globulars.py  RA_Distance_Belokurov_Compairison_With_Globulars_NoArrows.py  RA_Distance_Belokurov_Distance_Histogram.py  SGR_stream_density.py  Sample1DPlot.txt  Sample1DPlotSidd.txt  SweepPlot1d.py  SweepPlot1dWithError.py  SweepPlot2d.py  TestInit.txt  WedgeInLB.py  XYZ3PanelPlot.py  (+1 more)
SweepProgram/: CMakeLists.txt  Full1DSweep.sweep  HandleConfig.h  Makefile  README.txt  RunInstance.cpp  RunInstance.h  SampleSweepFile.sweep  Scheduler.cpp  Scheduler.h  Sweep.cpp  Sweep.h  Util.cpp  Util.h  main.cpp  stars-15-sim-1Jun1.txt
SweepProgram/include/: Sweep.h  SweepRunInstance.h
SweepProgram/sampleFiles/: SampleSweepFile.sweep
SweepProgram/src/: Sweep.cpp  SweepRunInstance.cpp  main.cpp
(+53 files in other folders)
